--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -44,9 +44,11 @@ vars:
 # using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
+    +required_docs: true
     staging:
       +materialized: view
     marts:
       +materialized: table
+      +required_tests: {"unique.*|not_null": 1}
   snowflake_spend:
     enabled: true
