--- a/models/staging/jaffle_shop/_stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_stg_jaffle_shop.yml
@@ -19,6 +19,8 @@ models:
             - relationships:
                 to: ref('stg_customers')
                 field: customer_id
+            - unique
+            - not_null
         - name: status
           description: '{{ doc("order_status") }}'
           tests:
@@ -29,3 +31,5 @@ models:
                   - returned
                   - placed
                   - return_pending
+            - unique
+            - not_null
