--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -7,7 +7,7 @@ version: '1.5.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+profile: 'other'
 
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
@@ -53,6 +53,9 @@ models:
         +schema: marts
         +materialized: table
         +required_tests: {"unique.*|not_null": 1}
+        +tags:
+          - "daily"
+          - "published"
 
 # ======
 # Snapshot Configs
