--- a/models/staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_src_jaffle_shop.yml
@@ -24,4 +24,8 @@ sources:
               tests:
                 - unique
                 - not_null
+          freshness: # default freshness
+            warn_after: {count: 12, period: hour}
+            error_after: {count: 24, period: hour}
+          loaded_at_field: order_date
 
